--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
     "resolveJsonModule": true,
     "strict": true /* Enable all strict type-checking options. */,
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */
+    // "paths": {
+    //   "@/*": ["./src/*"]
+    // }
   }
 }
